# SnowClaw

./: .env  .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GATEWAY_AUTH_RESEARCH.md  LICENSE  README.md  dev-setup.sh  install.sh  phase1_discovery.py  phase1_followup.py  phase1_parallel_repro.py  pyproject.toml  snowclaw.py
config/: connections.toml  openclaw.json
docs/: cortex-compatibility-matrix.md
plugins/cortex-code/: index.js
plugins/cortex-tools/: index.js
proxy/: Dockerfile  app.py  config.py  masking.py  response_logging.py  retry.py  transforms.py
proxy/tests/: test_app.py  test_masking.py  test_transforms.py
scripts/: docker-entrypoint.sh  setup-snowflake.sh
snowclaw/: __init__.py  channels.py  cli.py  commands.py  config.py  network.py  plugins.py  scaffold.py  snowflake.py  stage.py  utils.py
templates/: .env.example  .gitignore  Dockerfile  docker-compose.yml
templates/plugins/cortex-code/: package.json
templates/plugins/cortex-tools/: package.json
templates/scripts/: deploy.sh  docker-entrypoint.sh  inject-gateway-auth.sh
templates/skills/cortex-code/: SKILL.md
templates/spcs/: image-repo.sql  network-rules.yaml  proxy-service.yaml  service.yaml
tests/: conftest.py  cortex_stress_test.py  raw_stream_dump.py  smoke_proxy_endpoint.py  test_build_hooks.py  test_custom_secrets.py  test_migrate_openclaw_config.py  test_network_mode.py  test_openclaw_version.py  test_plugins.py  test_proxy_masking_messages.py  test_proxy_messages.py  test_proxy_retry.py  test_response_logging.py  test_role_provisioning.py
(+3 files in other folders)
